--- a/src/pages/about.css
+++ b/src/pages/about.css
@@ -1,9 +1,24 @@
+.about {
+  width: min(50vw, 600px);
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .textbody {
   font-family: Ubuntu;
   /* color: #dbdaca; */
   color: #b5b4a5;
   font-size: 20px;
   white-space: pre-line;
+  text-align: center;
+}
+
+.listText {
+  font-family: Ubuntu;
+  color: #b5b4a5;
+  font-size: 20px;
+  white-space: pre-line;
+  text-align: left;
 }
 
 .textHeader {
