--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,39 @@
+
+:root {
+  --titleColor: #71c200;
+  --navBarMenuColor: black;
+  --pageHeadingColor: black;
+  --backgroundColor: white;
+  --textColor: #171717;
+  --lineColor: black;
+  
+
+  /* Font */
+  /* --siteTitleFont: "Silkscreen"; */
+  --siteTitleFont: "Silkscreen";
+  --navBarFont: "Karla";
+  --pageHeadingFont: "Karla";
+  --textFont: "Inconsolata";
+}
+
+
+
+
 .App {
   text-align: center;
   position: fixed;
   padding: 0;
   margin: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
+  background-color: var(--backgroundColor);
+  overflow-y: auto;
+  min-width: 600px;
+}
 
-  background: #171717;
+.line {
+  margin:0px;
+  background-color: var(--lineColor);
 }
 
 .App-logo {
@@ -23,13 +50,6 @@
   color: #61dafb;
 }
 
-.headerLeft {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  justify-self: left;
-}
-
 @font-face {
   font-family: 'Silkscreen';
   font-weight: 400;
@@ -40,4 +60,22 @@
   font-family: 'Ubuntu';
   font-weight: 500;
   src: local('Ubuntu-medium'), url(./assets/fonts/Ubuntu-Medium.ttf) format('truetype');
+}
+
+@font-face {
+  font-family: "Inconsolata";
+  font-weight: 500;
+  src: lcoal('Inconsolata'), url(./assets/fonts/Inconsolata-Regular.ttf) format('truetype');
+}
+
+@font-face {
+  font-family: "FiraSans";
+  font-weight: 400;
+  src: lcoal('FiraSans'), url(./assets/fonts/FiraSans-SemiBold.ttf) format('truetype');
+}
+
+@font-face {
+  font-family: "Karla";
+  font-weight: 500;
+  src: local("Karla"), url(./assets/fonts/Karla-Medium.ttf) format('truetype');
 }
