--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -1,7 +1,7 @@
 
 .home h2 {
-  font-family: Ubuntu;
-  color: #b5b4a5;
+  font-family: var(--pageHeadingFont);
+  color: var(--pageHeadingFont);
   font-size: 80px;
   margin-top: 5%;
   white-space: pre-line;
@@ -9,9 +9,8 @@
 
 .home pre {
   margin-top: 100px;
-  font-family: Ubuntu;
-  /* color: #dbdaca; */
-  color: #b5b4a5;
+  font-family: var(--textFont);
+  color: var(--textColor);
   font-size: 20px;
 }
 
