--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -46,7 +46,11 @@
   height: 60px;
   margin-left: 35px;
   margin-right: 15px;
+  top: 0px;
+  bottom: 0px;
+  padding: 0px;
 }
+
 
 .navBar {
   text-align: center;
