--- a/src/components/contentpage.css
+++ b/src/components/contentpage.css
@@ -33,6 +33,9 @@
 .contentLink {
   margin: 0px;
   padding: 0.8vh;
+  width: 80%;
+  white-space: normal;
+  word-break: break-all;
 }
 
 .contentLink:hover {
@@ -48,3 +51,14 @@
   margin-top: 2vh;
   width: 50%;
 }
+
+.toggleSettings {
+  cursor: grab;
+  font-weight: bold;
+}
+
+.toggleSettings:hover {
+  width: 80%;
+  background-color: #FAA0A0;
+}
+
